tests/frontend/fail/array/out_of_bounds_inv.act
constructor of A
interface constructor()

creates

  uint x := 100


constructor of B
interface constructor(address<A> a)

creates

  int[3] arr := [1,2,3]

invariants

  arr[a.x] == 0
